--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
     "license": "MIT",
     "type": "module",
     "dependencies": {
+        "@clerk/express": "^1.4.17",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
         "express": "^5.1.0",
-        "mongoose": "^8.14.1"
+        "imagekit": "^6.0.0",
+        "mongoose": "^8.14.1",
+        "svix": "^1.65.0"
     }
 }
