--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "blog-person",
     "version": "1.0.0",
     "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
     "license": "MIT",
     "type": "module",
     "dependencies": {
