--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "blog-person",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "node index.js"
-    },
-    "license": "MIT",
-    "type": "module",
-    "dependencies": {
-        "@clerk/express": "^1.4.17",
-        "body-parser": "^2.2.0",
-        "cors": "^2.8.5",
-        "dotenv": "^16.5.0",
-        "express": "^5.1.0",
-        "imagekit": "^6.0.0",
-        "mongoose": "^8.14.1",
-        "svix": "^1.65.0"
-    }
+  "name": "blog-person",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node --env-file .env --watch index.js"
+  },
+  "license": "MIT",
+  "type": "module",
+  "dependencies": {
+    "@clerk/express": "^1.4.17",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "imagekit": "^6.0.0",
+    "mongoose": "^8.14.1",
+    "svix": "^1.65.0"
+  }
 }
