update notification with socket

--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "@clerk/express": "^1.4.17",
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.7.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "imagekit": "^6.0.0",
     "mongoose": "^8.14.1",
+    "socket.io": "^4.8.1",
     "svix": "^1.65.0"
   }
 }
