--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --env-file .env --watch index.js"
+    "dev": "node --env-file .env --watch src/index.js"
   },
   "license": "MIT",
   "type": "module",
