--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "node-cron": "^4.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "svix": "^1.65.0"
+    "svix": "^1.65.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
